# cpu-rasterizer

./: CMakeLists.txt  Geometry.hpp  Model.cpp  Model.hpp  README.md  TGAImage.cpp  TGAImage.hpp  main.cpp
